@@ -1,3 +1,10 @@
+2016-09-29  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
+
+	* gui/mainWindow.py (MainApp): Add expose function for drawing the
+	canvas.
+
+	* gui/widgets.py (NumberEntry): Document the class
+
 2016-09-27  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
 	* gui/widgets.py: Created module for new widgets
